--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Professional website template for AI startup company",
   "main": "index.html",
   "scripts": {
-    "start": "npx http-server . -p 3000 -o",
+    "start": "node server.js",
     "dev": "npx live-server --port=3000 --open=/index.html",
     "build": "echo 'No build process needed for static site'",
     "deploy": "echo 'Ready for deployment to any static hosting service'"
@@ -21,6 +21,9 @@
   ],
   "author": "AI Solutions",
   "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2"
+  },
   "devDependencies": {
     "http-server": "^14.1.1",
     "live-server": "^1.2.2"
